登录和注册验证规则

--- a/login.html
+++ b/login.html
@@ -23,12 +23,13 @@
             <form class="layui-form">
                 <div class="layui-form-item">
                     <i class="layui-icon layui-icon-username"></i> 
-                    <input type="text" name="username" required lay-verify="required" placeholder="请输入用户名"
+                    <!-- 如果要给input添加验证 lai-verify -->
+                    <input type="text" name="username" required lay-verify="required|username" placeholder="请输入用户名"
                         autocomplete="off" class="layui-input">
                 </div>
                 <div class="layui-form-item">
                     <i class="layui-icon layui-icon-password"></i> 
-                    <input type="password" name="password" required lay-verify="required" placeholder="请输入密码"
+                    <input type="password" name="password" required lay-verify="required|pass" placeholder="请输入密码"
                         autocomplete="off" class="layui-input">
                 </div>
                 <div class="layui-form-item">
@@ -47,17 +48,17 @@
             <form class="layui-form">
                 <div class="layui-form-item">
                     <i class="layui-icon layui-icon-username"></i> 
-                    <input type="text" name="username" required lay-verify="required" placeholder="请输入用户名"
+                    <input type="text" name="username" required lay-verify="required|username" placeholder="请输入用户名"
                         autocomplete="off" class="layui-input">
                 </div>
                 <div class="layui-form-item">
                     <i class="layui-icon layui-icon-password"></i> 
-                    <input type="password" name="password" required lay-verify="required" placeholder="请输入密码"
+                    <input type="password" name="password" required lay-verify="required|pass" placeholder="请输入密码"
                         autocomplete="off" class="layui-input">
                 </div>
                 <div class="layui-form-item">
                     <i class="layui-icon layui-icon-password"></i> 
-                    <input type="password" name="repassword" required lay-verify="required" placeholder="请确认密码"
+                    <input type="password" name="repassword" required lay-verify="required|pass|repass" placeholder="请确认密码"
                         autocomplete="off" class="layui-input">
                 </div>
                 <div class="layui-form-item">
@@ -70,6 +71,7 @@
             
         </div>
     </div>
+    <script src="/assets/lib/layui/layui.all.js"></script>
     <script src="/assets/lib/jquery.js"></script>
     <!-- 位置不能放反 -->
     <script src="/assets/js/login.js"></script>
