--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
         <!-- 登录 -->
         <div class="login-box">
 
-            <form class="layui-form">
+            <form class="layui-form" id="form_login">
                 <div class="layui-form-item">
                     <i class="layui-icon layui-icon-username"></i> 
                     <!-- 如果要给input添加验证 lai-verify -->
@@ -45,7 +45,7 @@
         <!-- 注册 -->
         <div class="reg-box">
 
-            <form class="layui-form">
+            <form class="layui-form" id="form_reg">
                 <div class="layui-form-item">
                     <i class="layui-icon layui-icon-username"></i> 
                     <input type="text" name="username" required lay-verify="required|username" placeholder="请输入用户名"
@@ -73,6 +73,7 @@
     </div>
     <script src="/assets/lib/layui/layui.all.js"></script>
     <script src="/assets/lib/jquery.js"></script>
+    <script src="/assets/js/baseAPI.js"></script>
     <!-- 位置不能放反 -->
     <script src="/assets/js/login.js"></script>
 </body>
