--- a/articl/art_cate.html
+++ b/articl/art_cate.html
@@ -42,7 +42,7 @@
     <tr>
         <td>{{$value.name}}</td>
         <td>{{$value.alias}}</td>
-        <td> <button type="button" class="layui-btn layui-btn-xs">编辑</button>
+        <td> <button type="button" data-id = "{{$value.Id}}" class="layui-btn layui-btn-xs editcate">编辑</button>
             <button type="button" class="layui-btn layui-btn-danger layui-btn-xs">删除</button></td>
       </tr>
 
@@ -73,7 +73,33 @@
               </div>
         </form>
 
+    </script>
+
+    <!-- 修改表单 -->
+    <script type="text/html" id="dialogedit">
+    <form class="layui-form" id = "form-edit" lay-filter="formedit">
+        <input type="hidden" name="Id">
+        <div class="layui-form-item">
+          <label class="layui-form-label">分类名称</label>
+          <div class="layui-input-block">
+            <input type="text" name="name" required  lay-verify="required" placeholder="请输入标题" autocomplete="off" class="layui-input">
+          </div>
+        </div>
+        <div class="layui-form-item">
+            <label class="layui-form-label">分类别名</label>
+            <div class="layui-input-block">
+              <input type="text" name="alias" required  lay-verify="required" placeholder="请输入标题" autocomplete="off" class="layui-input">
+            </div>
+          </div>
+          <div class="layui-form-item">
+            <div class="layui-input-block">
+              <button class="layui-btn" lay-submit lay-filter="formDemo">确认修改</button>
+            </div>
+          </div>
+    </form>
+
 </script>
+
 
     <!-- 引入js -->
     <script src="/assets/lib/layui/layui.all.js"></script>
