文章类别完成

--- a/articl/art_cate.html
+++ b/articl/art_cate.html
@@ -43,7 +43,7 @@
         <td>{{$value.name}}</td>
         <td>{{$value.alias}}</td>
         <td> <button type="button" data-id = "{{$value.Id}}" class="layui-btn layui-btn-xs editcate">编辑</button>
-            <button type="button" class="layui-btn layui-btn-danger layui-btn-xs">删除</button></td>
+            <button type="button" data-id = "{{$value.Id}}" class="layui-btn layui-btn-danger layui-btn-xs deletecate">删除</button></td>
       </tr>
 
 
