--- a/articl/art_cate.html
+++ b/articl/art_cate.html
@@ -50,7 +50,7 @@
     {{/each}}
     </script>
 
-    <!-- 添加表单 -->
+    <!-- 添加分类 -->
     <script type="text/html" id="dialogadd">
         <form class="layui-form" id = "form-add">
             <div class="layui-form-item">
@@ -75,7 +75,7 @@
 
     </script>
 
-    <!-- 修改表单 -->
+    <!-- 编辑表单 -->
     <script type="text/html" id="dialogedit">
     <form class="layui-form" id = "form-edit" lay-filter="formedit">
         <input type="hidden" name="Id">
