分页功能完成

--- a/articl/art_list.html
+++ b/articl/art_list.html
@@ -56,6 +56,9 @@
                 </tbody>
             </table>
             <!-- 分页区域 -->
+
+            <div id="renderpage"></div>
+
         </div>
     </div>
     <!-- 文章列表模板-->
@@ -67,8 +70,8 @@
         <td>{{$value.pub_date}}</td>
         <td>{{$value.state}}</td>
         <td>
-            <button type="button" class="layui-btn layui-btn-xs">编辑</button>
-            <button type="button" class="layui-btn layui-btn-danger layui-btn-xs">删除</button>
+            <button type="button" class="layui-btn layui-btn-xs">编辑</button> 
+            <button type="button" data-id = "{{$value.Id}}" class="layui-btn layui-btn-danger layui-btn-xs delete-btn">删除</button>
           </td>
       </tr>
     {{/each}}
@@ -81,7 +84,8 @@
      <option value="{{$value.Id}}">{{$value.name}}</option>
     {{/each}}
 </script>
-    <script src="/assets/lib/layui/lay.0ui.all.js"></script>
+    <script src="/assets/lib/layui/layui.js"></script>
+    <script src="/assets/lib/layui/layui.all.js"></script>
     <script src="/assets/lib/jquery.js"></script>
     <script src="/assets/js/baseAPI.js"></script>
     <script src="/assets/lib/template-web.js"></script>
