--- a/articl/art_list.html
+++ b/articl/art_list.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="layui-card">
-        <div class="layui-card-header">卡片面板</div>
+        <div class="layui-card-header">文章列表</div>
         <div class="layui-card-body">
             <!-- 筛选区域 -->
             <form class="layui-form" id="shaixuan">
@@ -31,8 +31,8 @@
                     <button class="layui-btn" lay-submit lay-filter="formDemo">筛选</button>
                 </div>
             </form>
-            <!-- 文章列表区域 -->
 
+            <!-- 文章列表区域 -->
             <table class="layui-table">
                 <colgroup>
                     <col>
@@ -43,6 +43,7 @@
                 </colgroup>
                 <thead>
                     <tr>
+
                         <th>文章标题</th>
                         <th>分类</th>
                         <th>发表时间</th>
@@ -55,8 +56,8 @@
 
                 </tbody>
             </table>
-            <!-- 分页区域 -->
 
+            <!-- 分页区域 -->
             <div id="renderpage"></div>
 
         </div>
